# EKOS

./: .gitignore  CLAUDE.md  README.md  TODO.md  devlog_1.md  devlog_10.md  devlog_11.md  devlog_12.md  devlog_13.md  devlog_14.md  devlog_15.md  devlog_16.md  devlog_17.md  devlog_18.md  devlog_2.md  devlog_3.md  devlog_4.md  devlog_5.md  devlog_6.md  devlog_7.md  devlog_8.md  devlog_9.md  ekos.md  ekos.toml  ekos_todo.md  next_steps.md  todo_v2.md
.claude/skills/ekos-knowledge/: SKILL.md
.claude/skills/memory/: SKILL.md
.github/workflows/: ci.yml
benchmark/: Cargo.toml
benchmark/benches/: fact_ledger.rs  fact_model.rs  identity_resolver.rs  index_runs.rs  ledger_write.rs  observation_git.rs  runtime_load_neighborhood.rs  segment_store.rs  semantic_compiler.rs  sql_analyzer.rs  storage_compaction.rs
demo/: DEMO.md  README.md  headless.sh
demo/agents/: estate-architect.md  estate-scout.md  impact-analyst.md  memory-keeper.md
demo/transcripts/: act-1.md  act-2.md  act-3.md  act-4.md  act-5.md  act-6.md  act-7.md
docs/rfcs/: 0000-template.md  0001-compiler-core.md  0002-artifact-system.md  0003-kir.md  0005-runtime.md  0006-observation-sdk.md  0007-identity-resolution.md  0008-llm-policy.md  0009-ai-runtime.md  0010-ekl.md  0011-optimizer.md  0012-enterprise-connectors-scaffold.md  0013-mcp-server.md  0014-content-indexing.md  0015-compact-storage.md  0016-fact-segment-engine.md
docs/spikes/: recovery_spike.py
ekos/: Cargo.toml
ekos/crates/artifact/: Cargo.toml
ekos/crates/artifact/src/: lib.rs  pack.rs  store.rs
ekos/crates/cli/: Cargo.toml
ekos/crates/cli/src/commands/: artifact.rs  ask.rs  branch.rs  build.rs  clean.rs  commit.rs  compile.rs  diff.rs  doctor.rs  ekl.rs  init.rs  ledger.rs  mcp.rs  mod.rs  query.rs  recover.rs  resolve.rs  store.rs
ekos/crates/cli/tests/: mcp_session.rs  skeleton.rs
ekos/crates/common/: Cargo.toml
ekos/crates/common/src/: compress.rs  lib.rs
ekos/crates/compiler-core/: Cargo.toml
ekos/crates/compiler-core/src/: cache.rs  compiler.rs  config.rs  diagnostics.rs  lib.rs  pass.rs  scheduler.rs
ekos/crates/compiler-sdk/: Cargo.toml
ekos/crates/compiler-sdk/src/: lib.rs
ekos/crates/ekl/: Cargo.toml
ekos/crates/ekl/src/: interpreter.rs  lib.rs  parser.rs
ekos/crates/identity/: Cargo.toml
ekos/crates/identity/src/: lib.rs  similarity.rs
ekos/crates/kir/: Cargo.toml
ekos/crates/kir/src/: lib.rs
ekos/crates/ledger/: Cargo.toml
ekos/crates/ledger/src/: fact.rs  fact_ledger.rs  index.rs  lib.rs  search.rs  segment.rs
ekos/crates/ledger/src/segment/: map.rs  mod.rs
ekos/crates/ledger/tests/: estate_migration.rs
ekos/crates/observation-sdk/: Cargo.toml
ekos/crates/observation-sdk/src/: lib.rs
ekos/crates/recovery/: Cargo.toml
ekos/crates/recovery/src/: anthropic.rs  cache.rs  git_analyzer.rs  lib.rs  llm.rs  sql_analyzer.rs
ekos/crates/runtime/: Cargo.toml
ekos/crates/runtime/src/: ai.rs  lib.rs
ekos/crates/scheduler/: Cargo.toml
ekos/crates/scheduler/src/: lib.rs
ekos/crates/semantic/: Cargo.toml
ekos/crates/semantic/src/: lib.rs
ekos/plugins/fabric/: Cargo.toml
ekos/plugins/fabric/src/: lib.rs
ekos/plugins/file/: Cargo.toml
ekos/plugins/file/src/: lib.rs
ekos/plugins/git/: Cargo.toml
ekos/plugins/git/src/: lib.rs
ekos/plugins/oracle/: Cargo.toml
ekos/plugins/oracle/src/: lib.rs
ekos/plugins/salesforce/: Cargo.toml
ekos/plugins/salesforce/src/: lib.rs
ekos/plugins/sap/: Cargo.toml
ekos/plugins/sap/src/: lib.rs
ekos/plugins/snowflake/: Cargo.toml
ekos/plugins/snowflake/src/: lib.rs
tests/fixtures/: ecommerce.sql  northwind.sql
tests/fixtures/git_fixture/: NOTICE.md  odoo_utm.bundle
tests/fixtures/sample_docs/: README.md  runbook.md
tests/fixtures/sample_project/src/: main.rs
tests/integration/: Cargo.toml
tests/integration/tests/: integration.rs
