[package]
name = "ekos"
description = "Enterprise Knowledge Operating System — CLI"
version.workspace = true
edition.workspace = true

[lib]
name = "ekos"
path = "src/lib.rs"

[[bin]]
name = "ekos"
path = "src/bin/ekos.rs"

[dependencies]
ekos-common.workspace = true
ekos-kir.workspace = true
ekos-artifact.workspace = true
ekos-compiler-core.workspace = true
ekos-ledger.workspace = true
ekos-runtime.workspace = true
ekos-observation-sdk.workspace = true
ekos-recovery.workspace = true
ekos-identity.workspace = true
ekos-ekl.workspace = true
ekos-semantic = { path = "../../crates/semantic" }
ekos-plugin-file = { path = "../../plugins/file" }
ekos-plugin-git  = { path = "../../plugins/git" }
clap.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
walkdir.workspace = true
chrono.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
