[package]
name = "ekos-kir"
description = "Knowledge Intermediate Representation — the four canonical node types"
version.workspace = true
edition.workspace = true

[dependencies]
ekos-common.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
