[package]
name = "ekos-recovery"
description = "Knowledge Recovery compiler passes: SqlAnalyzer, GitAnalyzer, LLM integration"
version.workspace = true
edition.workspace = true

[dependencies]
ekos-common.workspace = true
ekos-kir.workspace = true
ekos-artifact.workspace = true
ekos-compiler-core.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
sqlparser = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
