[package]
name = "ekos-plugin-file"
description = "File system observer plugin (Phase 3)"
version.workspace = true
edition.workspace = true

[dependencies]
ekos-common.workspace = true
ekos-observation-sdk.workspace = true
ekos-artifact.workspace = true
async-trait.workspace = true
walkdir.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
