[package]
name = "ekos-plugin-git"
description = "Git repository observer plugin (Phase 4)"
version.workspace = true
edition.workspace = true

[dependencies]
ekos-common.workspace = true
ekos-observation-sdk.workspace = true
ekos-artifact.workspace = true
async-trait.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
